<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#56006d"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        android:paddingStart="45dp"
        android:paddingEnd="45dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/gamecoin"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="end"
            android:letterSpacing="0.13"
            android:text="@string/skip"
            android:textColor="#ff5a85"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="64dp"
        android:src="@drawable/image2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="50dp"
        android:letterSpacing="-0.01"
        android:text="@string/forr"
        android:textColor="#99ff5a85"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="-25dp"
        android:letterSpacing="-0.02"
        android:text="@string/gamers"
        android:textAllCaps="true"
        android:textColor="#ff5a85"
        android:textSize="53sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="4sp"
        android:lineSpacingMultiplier="0.5"
        android:text="@string/excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia"
        android:textColor="#66ffffff"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/circles_2" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/button"
            android:text="Dive in"
            android:textColor="@color/white" />

    </RelativeLayout>

</LinearLayout>